# event-parser

./: AUTHORS  CMakeLists.txt  README.md  parser.vala
src/: EventParser.vala  EventParserHandler.vala  ParsedEvent.vala  event.vala  parser.vala  parser_de.vala   parser_en.vala  tests.vala
src/Parsers/: ParserDe.vala  ParserEn.vala
tests/: helper.vala  test_de.vala  test_en.vala  test_helper.vala
